# easyTemplateApp2

./: README.md  pyproject.toml
